# yggdrasil

./: .gitignore  AUDIT_GUIDE.md  CLAUDE.md  CONTEXT_MAP.md  Cargo.toml  DATAGRAM_SPECIFICATION.md  DEBUG_HLIDSKJALF.md  DISPLAY_AND_FILTERING.md  HLIDSKJALF_DATAGRAM.md  JSONL_VIEWER_PLAN.md  LICENSE  NEURODIVERGENT_MODALITIES.md  PLAN_UNIFIED_SHELL.md  README.md  SHARED_UI_DESIGN.md  YGGDRASIL_FEATURE_REQUESTS.md  deploy_apps.sh
.debug/: Cargo.toml  test_tokio_multicast.rs
audit/: INVARIANT_DRIFT_AUDIT.md  NAMING_AUDIT.md  RUST_BACKEND_AUDIT.md  STRICT_FRONTEND_AUDIT.md  STRICT_INVARIANT_AUDIT.md  SVELTE_FRONTEND_AUDIT.md  TERMINOLOGY_AUDIT.md  component_import_audit.md  css_architecture_audit.md  feature_distribution_audit.md  per_app_migration_inventory.md  shared_component_migration.md  token_css_migration.md
core/common_core/: Cargo.toml
core/common_core/src/: lib.rs
core/hlidskjalf_core/: Cargo.toml
core/hlidskjalf_core/src/: lib.rs
core/kvasir_core/: Cargo.toml
core/kvasir_core/src/: lib.rs
core/ratatoskr_core/: Cargo.toml
core/ratatoskr_core/src/: lib.rs
core/svalinn_core/: Cargo.toml
core/svalinn_core/src/: lib.rs
core/yggdrasil_shared/: Cargo.toml
hlidskjalf/: OUTLINE.md  package-lock.json  package.json  test_send_event.py  vite.config.js
hlidskjalf/src-tauri/: Cargo.toml  tauri.conf.json
hlidskjalf/src-tauri/capabilities/: default.json
hlidskjalf/src-tauri/icons/: icon.icns
hlidskjalf/src-tauri/src/: lib.rs  main.rs
hlidskjalf/src/lib/: HlidskjalfView.svelte  QualityReport.svelte
hlidskjalf/src/routes/: +page.svelte
kvasir/: OUTLINE.md  PLAN_SCHEMA_INSPECTOR.md  package-lock.json  package.json  vite.config.js
kvasir/src-tauri/: Cargo.toml  tauri.conf.json
kvasir/src-tauri/icons/: icon.icns
kvasir/src-tauri/src/: lib.rs  main.rs
kvasir/src/lib/: FormatControls.svelte  JsonlViewer.svelte  KvasirView.svelte  MarkdownPreview.svelte  SchemaInspector.svelte  TableViewer.svelte  kvasir-types.ts  schema-inspect.ts
kvasir/src/routes/: +layout.svelte  +page.svelte
ratatoskr/: OUTLINE.md  package-lock.json  package.json  vite.config.js
ratatoskr/src-tauri/: Cargo.toml  tauri.conf.json
ratatoskr/src-tauri/icons/: icon.icns
ratatoskr/src-tauri/src/: lib.rs  main.rs
ratatoskr/src/lib/: RatatoskrView.svelte
ratatoskr/src/routes/: +page.svelte
schemas/: compile_schema.py  datagram.schema.json  validate.datagram.schema.json
schemas/payloads/: payload.quality.schema.json  payload.traffic.schema.json
svalinn/: .gitignore  OUTLINE.md  README.md  package-lock.json  package.json
svalinn/src-tauri/: Cargo.toml  tauri.conf.json
svalinn/src-tauri/icons/: icon.icns
svalinn/src-tauri/src/: lib.rs  main.rs
svalinn/src/lib/: SvalinnView.svelte
svalinn/src/routes/: +layout.svelte  +page.svelte
ui/: index.js  package.json
ui/components/: AppHeader.svelte  Badge.svelte  Breadcrumbs.svelte  Button.svelte  Checkbox.svelte  Collapsible.svelte  ContainerLayout.svelte  EmptyState.svelte  ErrorBanner.svelte  FilterBanner.svelte  FontControls.svelte  Input.svelte  ListItem.svelte  ModeBar.svelte  Panel.svelte  SearchInput.svelte  Select.svelte  SettingsBar.svelte  SidebarLayout.svelte  Slider.svelte  SoloContainer.svelte  StatCard.svelte  ThemeSwitcher.svelte  ToggleGroup.svelte  TreeNode.svelte  YggContainer.svelte
ui/css/: base.css  tokens.css
ui/types/: container-types.ts
yggdrasil/: package-lock.json  package.json  svelte.config.js  vite.config.js
yggdrasil/src/: app.html
yggdrasil/src-tauri/: Cargo.toml  tauri.conf.json
yggdrasil/src-tauri/icons/: icon.icns
yggdrasil/src-tauri/src/: lib.rs  main.rs
yggdrasil/src/routes/: +page.svelte
