[workspace]
resolver = "2"
members = [
    "core/common_core",
    "core/hlidskjalf_core",
    "core/svalinn_core",
    "core/kvasir_core",
    "core/ratatoskr_core",
    "hlidskjalf/src-tauri",
    "svalinn/src-tauri",
    "kvasir/src-tauri",
    "ratatoskr/src-tauri",
    "yggdrasil/src-tauri",
]

[workspace.dependencies]
socket_emit = { path = "../nornir/capability/socket_emit" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
serde_toon2 = "0.1"
glob = "0.3"
dirs = "5"
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "sync", "time"] }
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
