[workspace]
resolver = "2"
members = [
    "core/common_core",
    "core/hlidskjalf_core",
    "core/svalinn_core",
    "core/kvasir_core",
    "core/ratatoskr_core",
    "hlidskjalf/src-tauri",
    "svalinn/src-tauri",
    "kvasir/src-tauri",
    "ratatoskr/src-tauri",
    "yggdrasil/src-tauri",
]

[workspace.dependencies]
datagram = { path = "../nornir/capability/datagram" }
format_core = { path = "../nornir/core/format_core" }
error_core = { path = "../nornir/core/error_core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
serde_toon2 = "0.1"
toon-format = "0.4"
ron = "0.12"
csv = "1"
parquet = { version = "58", default-features = false, features = ["arrow"] }
arrow = { version = "58", default-features = false }
glob = "0.3"
dirs = "5"
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "sync", "time", "macros"] }
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
