[package]
name = "kvasir_core"
version = "0.1.0"
edition = "2021"

[dependencies]
common_core = { path = "../common_core" }
format_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
csv = { workspace = true }
parquet = { workspace = true }
arrow = { workspace = true }
