[package]
name = "hlidskjalf"
version = "0.1.0"
description = "Real-time agent activity monitor"
edition = "2021"

[lib]
name = "hlidskjalf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
hlidskjalf_core = { path = "../../core/hlidskjalf_core" }
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tokio = { workspace = true }
