[package]
name = "svalinn"
version = "0.1.0"
description = "Code quality viewer (saga/gleipnir)"
edition = "2021"

[lib]
name = "svalinn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
svalinn_core = { path = "../../core/svalinn_core" }
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-dialog = { workspace = true }
